[gd_scene load_steps=21 format=3 uid="uid://bbgnywm2s1xwj"]

[ext_resource type="Texture2D" uid="uid://c1fokww7kvk4j" path="res://Textures/slotmachinebg2.png" id="1_c5fgl"]
[ext_resource type="Script" path="res://Scripts/Environment/slots.gd" id="2_y6qvv"]
[ext_resource type="AudioStream" uid="uid://k1tjg1sod8m1" path="res://Audio/casinoroll.mp3" id="3_w0uxt"]
[ext_resource type="AudioStream" uid="uid://b7w8wqn8yeca2" path="res://Audio/slotpulled.mp3" id="4_7whwd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_diyxc"]
atlas = ExtResource("1_c5fgl")
region = Rect2(320, 360, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0wov"]
atlas = ExtResource("1_c5fgl")
region = Rect2(640, 360, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_kiidt"]
atlas = ExtResource("1_c5fgl")
region = Rect2(960, 360, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_4laj1"]
atlas = ExtResource("1_c5fgl")
region = Rect2(1280, 360, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfq75"]
atlas = ExtResource("1_c5fgl")
region = Rect2(0, 540, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3vfe"]
atlas = ExtResource("1_c5fgl")
region = Rect2(320, 540, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhjwi"]
atlas = ExtResource("1_c5fgl")
region = Rect2(640, 540, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_34k4o"]
atlas = ExtResource("1_c5fgl")
region = Rect2(960, 540, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_df4bj"]
atlas = ExtResource("1_c5fgl")
region = Rect2(320, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_vc88f"]
atlas = ExtResource("1_c5fgl")
region = Rect2(640, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f7wr"]
atlas = ExtResource("1_c5fgl")
region = Rect2(960, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yhq2"]
atlas = ExtResource("1_c5fgl")
region = Rect2(640, 180, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0w5h"]
atlas = ExtResource("1_c5fgl")
region = Rect2(960, 180, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_umpr0"]
atlas = ExtResource("1_c5fgl")
region = Rect2(1280, 180, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddcsv"]
atlas = ExtResource("1_c5fgl")
region = Rect2(0, 360, 320, 180)

[sub_resource type="SpriteFrames" id="SpriteFrames_21tro"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_diyxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0wov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kiidt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4laj1")
}],
"loop": false,
"name": &"failOne",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfq75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3vfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhjwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34k4o")
}],
"loop": false,
"name": &"failTwo",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_df4bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vc88f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f7wr")
}],
"loop": true,
"name": &"spinning",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yhq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0w5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umpr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddcsv")
}],
"loop": false,
"name": &"win",
"speed": 8.0
}]

[node name="Slots" type="AnimatedSprite2D"]
light_mask = 4
visibility_layer = 4
position = Vector2(0, -162)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_21tro")
animation = &"win"
autoplay = "spinning"
frame = 3
frame_progress = 1.0
script = ExtResource("2_y6qvv")

[node name="Timer" type="Timer" parent="."]

[node name="AudioManager" type="Node" parent="."]

[node name="CasinoRoll" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("3_w0uxt")
volume_db = -5.778
pitch_scale = 1.25
parameters/looping = true

[node name="SlotPulled" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("4_7whwd")
volume_db = -8.988
